game summary - fix anchor links in left sidebar to jump to right place
Due to the fixed top navbar you need to jump to a location 50px above
the game summary heading. Use an invisible anchor link offsetted
by -50px and jump there instead.

--- a/template/css/style.css
+++ b/template/css/style.css
@@ -109,3 +109,8 @@ a:focus {
 .panel-body {
     padding: 0.5em 0.5em 0 0.5em;
 }
+.anchor-link {
+    display: block;
+    position: relative;
+    top: -50px;
+}
